--- a/valerys/src/App.css
+++ b/valerys/src/App.css
@@ -7,9 +7,46 @@ li{
   gap: 1rem;
   margin:2rem;
 }
-
-
-
+.menu-headerValerys{
+  position: sticky;
+  top: 0;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  background-color: whitesmoke;
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  margin: 2rem;
+}
+.linkHeader{
+  margin:1rem;
+  padding: 1rem;
+  text-decoration: none;
+  color: black;
+  font-family: "Merienda", cursive;
+  font-optical-sizing: auto;
+  font-weight: weight;
+  font-style: normal;
+  font-size: 2rem;
+}
+.linkHeader:hover{
+  border: 1px black solid;
+  margin:1rem;
+  padding: 1rem;
+  padding-bottom: 0;
+  text-decoration: none;
+  color: cornflowerblue;
+  background-color: #282c34;
+  font-family: "Merienda", cursive;
+  font-optical-sizing: auto;
+  font-weight: weight;
+  font-style: normal;
+}
+.imageLogo{
+  max-width:7rem ;
+  height:auto;
+  padding: 0;
+  min-width: 3rem;
+}
 /* --------------------------------- */
 .App {
   text-align: center;
